# rust-top-words

./: Cargo.toml  README.md
src/: lib.rs
src/resources/: english
